<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <TextView
        android:id="@+id/text_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_verification_code"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_margin_top"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:layout_below="@id/text_verification"
        android:singleLine="true"
        android:hint="@string/verification_code"
        android:textSize="18sp">
        <requestFocus/>
    </EditText>
    <TextView
        android:id="@+id/incorrect_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/edt_otp"
        android:gravity="center"
        android:text="@string/incorrect_code"
        android:textColor="@color/colorError"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/incorrect_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/get_started"
        android:background="@drawable/bg_button"
        android:textColor="@color/colorTextWhite"
        android:textSize="17sp"/>

</RelativeLayout>

