<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">
    <TextView
        android:id="@+id/text_verify_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_phone_number"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_margin_top"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/text_verify_phone"
        android:focusable="false"
        android:singleLine="true"
        tools:text="India"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_country_code"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_country_name"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:inputType="phone"
        android:singleLine="true"
        tools:text="+91"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_country_name"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/edt_country_code"
        android:layout_toRightOf="@+id/edt_country_code"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:singleLine="true"
        android:textSize="18sp">
        <requestFocus/>
    </EditText>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="@dimen/width_button"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_phone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/verify"
        android:background="@drawable/bg_button"
        android:textColor="@color/colorTextWhite"
        android:textSize="17sp"/>

</RelativeLayout>
